Fix display issue on smaller screens - Fix for small screen (width 1700 and below)

--- a/style/setting-box.css
+++ b/style/setting-box.css
@@ -4,8 +4,8 @@
     z-index: 99; /* Sit on top */
     left: 0;
     top: 0;
-    height: 100%;
-    width: 100%;
+	height: 100vh;
+	width: 100vw;
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
@@ -16,7 +16,7 @@
     vertical-align: middle;
 }
 
-.modal-content-start {
+.modal-content {
     background-image: url("../img/background/old-paper-1957.png");
     background-size: 100% 100%;
     font-family: 'Tienne', serif;
@@ -61,4 +61,16 @@ select{
 
 label {
     display: inline-block;
+}
+
+@media only screen and (max-width: 840px) {
+	.modal-content {
+		width: 100vw;
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
+	.SettingPanel {
+		width: auto;
+	}
 }
